--- a/movie_bookings/templates/movie_bookings/base.html
+++ b/movie_bookings/templates/movie_bookings/base.html
@@ -26,13 +26,31 @@
             </div>
           </li>
         </ul>
+
+
         <form class="form-inline my-lg-0">
-          <input class="form-control mr-sm-5" type="search"  id="search" placeholder="Search" aria-label="Search"/>
-          <select class="custom-select custom-select-sm mr-sm-5" id="select_city" >
-          </select>
+          
+          <div class="mr-sm-5">
+          {% block date %}
+          {% endblock %}
+          </div>
+
+          <div class="mr-sm-5" style="color:black">
+            {% block city %}
+            {% endblock city %}
+          </div>
+          
+         
+
+          {% block search %}
+          <input type="text" class="form-control mr-sm-5"  id="search" list="select_city" placeholder="Search" >
+          <datalist class="mr-sm-5" id="select_city" >
+          </datalist>
           <p class="mr-sm-5" id ="selected_city"></p>
           
-          
+          {% endblock search %}
+
+
           {% comment %} <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Profile</button> {% endcomment %}
   
           {% if request.user.is_anonymous == False %}
@@ -65,6 +83,8 @@
     {% block content %}{% endblock content %}
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
     <script>
       $("#search").on("change keyup paste", function(e){
           $.ajax({
@@ -73,10 +93,10 @@
             data: {keyword: $('#search').val()},
             success: function (result) {
                 if ($('#search').val().length>=2){
-                  options="<option>Select City</option>"
+                  options=""
                   result=result["search_result"]
                   result.forEach((city)=>{
-                    options= options + `<option value="${city}">${city}</option>`
+                    options= options + `<option value="${city}">`
                   })
                   console.log(options)
                   $("#select_city").html(options)
@@ -85,13 +105,11 @@
           });
         })
 
-        $('#select_city').on('change', function (e) {
-          var optionSelected = $(this).find("option:selected");
-          var valueSelected  = optionSelected.val();
-          
+        $("#search").focusout(function(){
+          var valueSelected  = $(this).val();
           window.location.href= 'http://127.0.0.1:8000/movies/movies/'+valueSelected+'/'
-        })
-    
+        });
+
   
     </script>
   </body>
