--- a/movie_bookings/templates/movie_bookings/movies_list.html
+++ b/movie_bookings/templates/movie_bookings/movies_list.html
@@ -1,6 +1,13 @@
 
 {% extends "movie_bookings/base.html" %}
 
+{% block city %}
+
+<p class="my-2 mx-5">{{city_id}}</p>
+
+{% endblock city %}
+{% block search %}{% endblock %}
+
 {% block content %}
 
 <head>
@@ -27,8 +34,11 @@
           }
           
     </style>
+
+
   </head>
 <body>
+
 
 {% load static %}
 <div>
